# OOP

./: .gitignore  README.md  tags
DZ1/: CMakeLists.txt
DZ1/ImageEditor/: CMakeLists.txt  Main.cpp
DZ1/ImageEditor/include/: ImageEditor.h  Layer.h  LayerList.h
DZ1/ImageEditor/src/: CMakeLists.txt  ImageEditor.cpp  Layer.cpp  LayerList.cpp
DZ1/ImageEditor/tests/: CMakeLists.txt  testing.cpp
DZ1/Main/: CMakeLists.txt  Main.cpp
DZ2/: Test.cpp
DZ2/include/: Circuit.h  CircuitExceptions.h  Element.h  Gates.h  Graph.h  Simulator.h  Sources.h
DZ2/src/: Circuit.cpp  Element.cpp  Gates.cpp  Graph.cpp  Simulator.cpp  Sources.cpp
project/: CMakeLists.txt
project/msvsproject/oop_pr/source_code/: main.cpp  oop_pr.cpp
project/msvsproject/oop_pr/source_code/implementation/: Compiler.cpp
project/msvsproject/oop_pr/source_code/include/: Compiler.h
project/source/: oop_pr.cpp
project/source/implementation/: Compiler.cpp  Config.cpp  Machine.cpp  Memory.cpp  Operation.cpp
project/source/include/: Compiler.h  Config.h  Logger.h  Machine.h  Memory.h  Operation.h
